--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Mahdi</title>
 </head>
 <body>
@@ -17,6 +17,20 @@
             <a href="#cont">Contact</a>
         </nav>
     </header>
+
+    <section class="main">
+        <div>
+            <h2>Hello, I'am Mahdi<br><span>Computing Science studint</span></h2>
+            <h3></h3>
+            <a href="#proj" class="main-btn">View my work</a>
+
+            <div class="social">
+                <a href="https://www.instagram.com/mahdawe2003/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCpxRkxNWof1tUCVmmMrLb7Q" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://github.com/mahdawemghr" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
