--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main">
         <div>
             <h2>Hello, I'am Mahdi<br><span>Computing Science studint</span></h2>
-            <h3></h3>
+            <h3>any thing about me</h3>
             <a href="#proj" class="main-btn">View my work</a>
 
             <div class="social">
