--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <a href="#" class="logo">mahdi</a>
         <nav class="navig">
-            <a href="#serv">Services</a>
-            <a href="#proj">Projects</a>
-            <a href="#cont">Contact</a>
+            <a href="#Services">Services</a>
+            <a href="#Projects">Projects</a>
+            <a href="#Contact">Contact</a>
         </nav>
     </header>
 
@@ -28,6 +28,39 @@
                 <a href="https://www.instagram.com/mahdawe2003/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCpxRkxNWof1tUCVmmMrLb7Q" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://github.com/mahdawemghr" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="cards" id="Services">
+        <h2 class="title">Services</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-mobile"></i>
+                </div>
+                <div class="info">
+                    <h3>IPhon</h3>
+                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-laptop"></i>
+                </div>
+                <div class="info">
+                    <h3>laptop</h3>
+                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-camera-retro"></i>
+                </div>
+                <div class="info">
+                    <h3>camera</h3>
+                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                </div>
             </div>
         </div>
     </section>
