--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
             <h2>Hello, I'am Mahdi<br><span>Computing Science studint</span></h2>
             <h3>any thing about me</h3>
-            <a href="#proj" class="main-btn">View my work</a>
+            <a href="#Projects" class="main-btn">View my work</a>
 
             <div class="social">
                 <a href="https://www.instagram.com/mahdawe2003/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -64,6 +64,47 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="Projects" id="Projects">
+        <h2 class="title">Projects</h2>
+        <div class="content">
+            <div class="projCard">
+                <div class="projVideo">
+                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="projinfo">
+                    <p class="projectcat">sayed ahmed</p>
+                    <strong class="vidtitle">
+                        <span>youtube</span>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="projCard">
+                <div class="projVideo">
+                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="projinfo">
+                    <p class="projectcat">sayed ahmed</p>
+                    <strong class="vidtitle">
+                        <span>youtube</span>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="projCard">
+                <div class="projVideo">
+                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="projinfo">
+                    <p class="projectcat">sayed ahmed</p>
+                    <strong class="vidtitle">
+                        <span>youtube</span>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                    </strong>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
