--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="R.png" type="image/x-icon">
     <title>Mahdi</title>
 </head>
 <body>
@@ -76,7 +77,7 @@
                     <p class="projectcat">sayed ahmed</p>
                     <strong class="vidtitle">
                         <span>youtube</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
@@ -88,7 +89,7 @@
                     <p class="projectcat">sayed ahmed</p>
                     <strong class="vidtitle">
                         <span>youtube</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
@@ -100,11 +101,45 @@
                     <p class="projectcat">sayed ahmed</p>
                     <strong class="vidtitle">
                         <span>youtube</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank">more details</a>
+                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="cards-contact" id="Contact">
+        <h2 class="title">Contact</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="info">
+                    <h3>My phone</h3>
+                    <p>+973 33250 313</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+                <div class="info">
+                    <h3>Gmail</h3>
+                    <p>mahdemghr2003@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright <span>mahdi</span></p>
+        <div class="footer-social">
+            <a href="https://www.instagram.com/mahdawe2003/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCpxRkxNWof1tUCVmmMrLb7Q" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://github.com/mahdawemghr" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
+
 </body>
 </html>
