--- a/index.html
+++ b/index.html
@@ -71,36 +71,36 @@
         <div class="content">
             <div class="projCard">
                 <div class="projVideo">
-                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ak4-dQDpBqE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="projinfo">
-                    <p class="projectcat">sayed ahmed</p>
+                    <p class="projectcat">video editing</p>
                     <strong class="vidtitle">
-                        <span>youtube</span>
+                        <span>Fortnite</span>
+                        <a href="https://youtu.be/Ak4-dQDpBqE" target="_blank" class="more">more details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="projCard">
+                <div class="projVideo">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AsCMuyOKcZQ?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="projinfo">
+                    <p class="projectcat">video editing</p>
+                    <strong class="vidtitle">
+                        <span>Fortnite</span>
                         <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
             <div class="projCard">
                 <div class="projVideo">
-                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/YvyhzkBWU64?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="projinfo">
-                    <p class="projectcat">sayed ahmed</p>
+                    <p class="projectcat">video editing</p>
                     <strong class="vidtitle">
-                        <span>youtube</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
-                    </strong>
-                </div>
-            </div>
-            <div class="projCard">
-                <div class="projVideo">
-                    <iframe src="https://www.youtube.com/embed/sbKCEvfnPDE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <div class="projinfo">
-                    <p class="projectcat">sayed ahmed</p>
-                    <strong class="vidtitle">
-                        <span>youtube</span>
+                        <span>black ops 3</span>
                         <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
