--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="main">
         <div>
             <h2>Hello, I'am Mahdi<br><span>Computing Science studint</span></h2>
-            <h3>any thing about me</h3>
+            <h3>My CV for more information <a class="CV" href="My CV.pdf" target="_blank"><i class="fa-solid fa-file-invoice"></i></a></h3>
             <a href="#Projects" class="main-btn">View my work</a>
 
             <div class="social">
@@ -38,29 +38,29 @@
         <div class="content">
             <div class="card">
                 <div class="icon">
-                    <i class="fa-solid fa-mobile"></i>
+                    <i class="fa-regular fa-lightbulb"></i>
                 </div>
                 <div class="info">
-                    <h3>IPhon</h3>
-                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                    <h3>Problem-Solving</h3>
+                    <p>One of my greatest strengths is my ability to work well under pressure and quickly solve problems. When faced with a challenge, I remain calm and focused, which allows me to think clearly and effectively. I thrive in fast-paced environments and am not afraid to take on difficult tasks.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="icon">
-                    <i class="fa-solid fa-laptop"></i>
+                    <i class="fa-solid fa-code"></i>
                 </div>
                 <div class="info">
-                    <h3>laptop</h3>
-                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                    <h3>Coding</h3>
+                    <p>I have a strong proficiency in both Python and Java programming languages and am able to write code quickly and efficiently. My experience with these languages has allowed me to develop a deep understanding of their syntax and structure, which enables me to create complex programs with ease.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="icon">
-                    <i class="fa-solid fa-camera-retro"></i>
+                    <i class="fa-solid fa-photo-film"></i>
                 </div>
                 <div class="info">
-                    <h3>camera</h3>
-                    <p>hello I am mahdi I have a pc I can edit videos and write codes and more like this and thank you 7beb</p>
+                    <h3>Montage</h3>
+                    <p>I possess a strong set of video editing and montage skills, which allows me to produce high-quality videos that effectively convey the desired message or tell a compelling story. Over the years, I have honed my skills by working on a variety of projects, ranging from short social media videos to longer-form productions.</p>
                 </div>
             </div>
         </div>
