--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p class="projectcat">video editing</p>
                     <strong class="vidtitle">
                         <span>Fortnite</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
+                        <a href="https://youtu.be/AsCMuyOKcZQ" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     <p class="projectcat">video editing</p>
                     <strong class="vidtitle">
                         <span>black ops 3</span>
-                        <a href="https://youtu.be/sbKCEvfnPDE" target="_blank" class="more">more details</a>
+                        <a href="https://youtu.be/YvyhzkBWU64" target="_blank" class="more">more details</a>
                     </strong>
                 </div>
             </div>
