--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="main">
         <div>
-            <h2>Hello, I'am Mahdi<br><span>Computing Science studint</span></h2>
+            <h2>Hello, I'am Mahdi<br><span>Computing Science student</span></h2>
             <h3>My CV for more information <a class="CV" href="My CV.pdf" target="_blank"><i class="fa-solid fa-file-invoice"></i></a></h3>
             <a href="#Projects" class="main-btn">View my work</a>
 
